--- a/src/app/shared/components/schedule-timeline/schedule-timeline.component.css
+++ b/src/app/shared/components/schedule-timeline/schedule-timeline.component.css
@@ -3,6 +3,7 @@
   min-width: 10px;
   padding: 3px 7px;
   font-weight: 500;
+  font-size: 90%;
   line-height: 1;
   padding: 10px;
   text-align: center;
