--- a/src/app/pages/executions/group-info/group-info.component.html
+++ b/src/app/pages/executions/group-info/group-info.component.html
@@ -136,5 +136,5 @@
   </div>
 </div>
 
-<executions *ngIf="batchId" [embedded]="true" [batchId]="batchId"></executions>
-<executions *ngIf="chainId" [embedded]="true" [chainId]="chainId"></executions>
+<executions *ngIf="batchId" [embedded]="true" [batchId]="batchId" [hideParameters]="!job?.parametersClassName"></executions>
+<executions *ngIf="chainId" [embedded]="true" [chainId]="chainId" [hideParameters]="!job?.parametersClassName"></executions>
