--- a/src/app/shared/components/execution-timeline/execution-timeline.component.html
+++ b/src/app/shared/components/execution-timeline/execution-timeline.component.html
@@ -5,7 +5,7 @@
     <span class="time time-{{ t.state }}" ngbPopover="{{ t.label }} {{ t.time | timeAgoStatic }}" triggers="mouseenter:mouseleave">
       <strong>{{ t.label }}</strong>
       <hr />
-      <span class="text-muted">{{ t.time | date: 'dd.MM.yyyy':'UTC' }}</span> {{ t.time | date: 'HH:mm:ss':'UTC' }}
+      <span class="text-muted">{{ t.time | date: 'dd.MM.yyyy' }}</span> {{ t.time | date: 'HH:mm:ss' }}
     </span>
   </span>
 </ng-container>
@@ -14,9 +14,9 @@
   <span *ngFor="let t of timeline" class="time-embedded-straight">
     <span [hidden]="t.duration === undefined" class="badge-embedded">{{ t.duration | jobDuration: 's':true }}</span>
     <span class="time-embedded time-{{ t.state }}" ngbPopover="{{ t.label }} {{ t.time | timeAgoStatic }}" triggers="mouseenter:mouseleave">
-      <span class="text-muted">{{ t.time | date: 'dd.MM.yyyy':'UTC' }}</span>
+      <span class="text-muted">{{ t.time | date: 'dd.MM.yyyy' }}</span>
       <hr />
-      {{ t.time | date: 'HH:mm:ss':'UTC' }}
+      {{ t.time | date: 'HH:mm:ss' }}
     </span>
   </span>
 </ng-container>
